# deep-learn-framework

./: CMakeLists.txt  README.md  deep-learn-framework.kdev4
.kdev4/: deep-learn-framework.kdev4
confs/: dl_master_net_conf.ini  dl_worker_net_conf.ini  rm_master_net_conf.ini  slave_net_conf.ini
confs/apps/: FFNN_train.ini  SdAE_train.ini
src/common/: common.h  scope_guard.h  types.h
src/dsource/: divide.cpp  divide.h  read.cpp  read.h
src/dtype/: type.h
src/nn/: arch.cpp  arch.h  fbnn.cpp  fbnn.h  loss.h  opt.h
src/pkgs/: file_send.cpp  file_send.h  pkgs.cpp  pkgs.h  sae_handles.cpp  sae_handles.h
src/sae/: sae.cpp  sae.h  sae_UDL.cpp  sae_UDL.h  sae_from_config.cpp  sae_from_config.h
src/tools/: dl_master.cpp  dl_worker.cpp  rm_master.cpp  slave.cpp  test_divide.cpp  test_file_send.cpp
src/utils/: math.cpp  math.h  matlib.cpp  matlib.h  utils.cpp  utils.h
